--- a/trunk/ssf/build.xml
+++ b/trunk/ssf/build.xml
@@ -53,6 +53,8 @@
 		<ant dir="liferay" target="clean" />
 		<ant dir="taglib" target="clean" />
 
+		<ant dir="tools" target="clean" />
+		
 		<ant dir="web" target="clean" />
 
 		<ant dir="war" target="clean" />
@@ -75,6 +77,8 @@
 		<ant dir="liferay" target="compile" />
 		<ant dir="taglib" target="compile" />
 		
+		<ant dir="tools" target="compile" />
+		
 		<ant dir="samples" target="compile" />
 	</target>
 
@@ -91,6 +95,8 @@
 		<ant dir="liferay" target="jar" />
 		<ant dir="taglib" target="jar" />
 
+		<ant dir="tools" target="jar" />
+		
 		<ant dir="web" target="war" />
 
 		<ant dir="war" target="war" />
@@ -111,6 +117,7 @@
 		<ant dir="portal-module" target="java2html" />
 		<ant dir="liferay" target="java2html" />
 		<ant dir="taglib" target="java2html" />
+		<ant dir="tools" target="java2html" />
 	</target>
 
 	<target name="javadoc">
@@ -126,6 +133,7 @@
 		<ant dir="portal-module" target="javadoc" />
 		<ant dir="liferay" target="javadoc" />
 		<ant dir="taglib" target="javadoc" />
+		<ant dir="tools" target="javadoc" />
 	</target>
 
 
