--- a/trunk/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
@@ -14,7 +14,12 @@ debug.web.request.env.print=false
 
 # Web context root (optional) - If unspecified, defaults to /ssf
 ssf.ctx=/ssf
-# The name of the host (required)
+# The name of the host (required) - This information is used to generate
+# urls for a variety of client usages including web applications, web
+# services, RSS feeders and email notifications, etc.  Therefore it is
+# imperative to use real host name NOT localhost in production environment.
+# If localhost is used, clients will not be able to access the system
+# through generated urls when they access from remote hosts.
 ssf.host=localhost
 # The port number on the host (optional) - If unspecified, defaults to 80
 ssf.port=8080
